added file document and comments

--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es"> 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body> 
     
 </body>
 </html>
+
+<!-- Nuestro documento html se compone de dos partes, el head y el html -->
+<!-- head: habla de la página pero los usuarios no lo ven -->
+<!-- Identación!! las etiquetas tienen una jerarquia -->
+
+<!-- ETIQUETAS -->
+<!-- HTML5 contendrá todo el cuerpo de mi página. Necesita del lenguaje e incluso puede ser más específico ese dominio como: es-MX, dependiendo en el país que estemos cambia el significado de las palabras -->
+<!-- DOCTYPE a partir de html5 se incorpora el doctype, para que sea un solo documento que soporta todo -->
+1.1.33
