icons svg and list

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- TITLE entre 55 y 66 carácteres. Atributos name y content: description y en content un párrafo que no pase de 165 caracteres, 
     esto nos ayudará con el seo, el título y la descripción no debe ser lo mismo -->
-    <title>Document</title>
+    <title>HTML♥</title>
     <!-- linkeo del css, la mejor forma -->
     <link rel="stylesheet" href="assets/style.css">
 </head>
@@ -121,6 +121,75 @@
     <img src="img/arnold.gif" alt="Arnold el cabeza de balón♥">
     <!-- svg -->
     <img src="img/happy-face.svg" alt="Happy">
+    <hr>
+    <h2>SVG</h2>
+    <h3>Si realizo un diseño en Ilustrator puedo descargarlo en SVG</h3> 
+    <img src="img/contact-iphone.svg" alt="Iphone">
+    <hr>
+    <h2>Figuras</h2>
+    <figure>
+        <img src="img/start.png" alt="Nam♥">
+        <!-- Puedo poner una nota al pie de la foto con la etiqueta figcaption-->
+        <figcaption>Nam♥</figcaption>
+    </figure>
+    <hr>
+    <h2>Listas ordenadas</h2>
+    <ol>
+        <li>Verano</li>
+        <li>Otoño</li>
+        <li>Invierno</li>
+        <li>Primavera</li>
+    </ol>
+    <!-- la etiqueta ol tiene como atributo el start, alli indico desde dónde quiero empezar -->
+    <ol start="5">
+        <li>Verano</li>
+        <li>Otoño</li>
+        <li>Invierno</li>
+        <li>Primavera</li>
+    </ol>
+    <!-- también puede ser al revés el orden: reversed -->
+    <!-- existen atributos booleanos, si lo tiene aplica, verdadero si no lo tiene, falso como en este caso -->
+    <ol reversed>
+        <li>Verano</li>
+        <li>Otoño</li>
+        <li>Invierno</li>
+        <li>Primavera</li>
+    </ol>
+    <ol type="I">
+        <!-- existen varios atributos como mayusculas y minusculas -->
+        <li>Verano</li>
+        <li>Otoño</li>
+        <li>Invierno</li>
+        <li>Primavera</li>
+    </ol>
+    <hr>
+    <h2>Listas desordenadas</h2>
+    <!-- más atributos como disc(por defecto), circle, square -->
+    <ul type="circle">
+        <li>Mañana</li>
+        <li>Tarde</li>
+        <li>Noche</li>
+        <li>Madrugada</li>
+    </ul>
+    <ul type="square">
+        <li>Mañana</li>
+        <li>Tarde</li>
+        <li>Noche</li>
+        <li>Madrugada</li>
+    </ul>
+    <hr>
+    <h2>Listas de definición</h2>
+    <!-- se crean con la etiqueta dl(definition list) -->
+    <dl>
+        <!-- dt: definition term(termino a definir) -->
+        <dt>HTML</dt>
+        <!-- dd: definition data -->
+        <dd>Es un lenguaje de marcado que define el contenido de la web</dd>
+        <dt>CSS</dt>
+        <dd>Es un lenguaje de definición que da estilos al código html</dd>
+        <dt>Javascript</dt>
+        <dd>Es el lenguaje de la web</dd>
+    </dl>
     <hr>
     <h2>Script en html</h2>
     <!-- Antes de la etiqueta de cierre del body -->
