--- a/index.html
+++ b/index.html
@@ -249,6 +249,22 @@
         </tfoot>
     </table>
     <hr>
+    <h2>Enlaces</h2>
+    <!-- enlace interno -->
+    <a href="otroIndex.html">Hacia la otra página</a>
+    <br>
+    <!-- enlace externo -->
+    <!-- target="_blank para abrir en un enlace externo y no en la misma pestaña -->
+    <!-- rel="nofollow para que los motores de busqueda no lo sigan porque es un enlace externo,
+    por ejemplo si tiene relación con mi sitio no seria necesario ponerlo pero si no tiene relación y habla de otra cosa no directamente relacionada se pone -->
+    <a href="https://danielacalisaya.github.io/myPortfolio/" target="_blank" rel="nofollow">Mi portfolio</a>
+    <br>
+    <!-- como enlace también puede ser una imagen o el mismo svg-->
+    <a href="https://danielacalisaya.github.io/myPortfolio/" target="_blank">
+        <img src="img/happy-face.svg" alt="Mi página">
+    </a>
+    4.00.50
+    <hr>
     <h2>Script en html</h2>
     <!-- Antes de la etiqueta de cierre del body -->
     <script>
