--- a/index.html
+++ b/index.html
@@ -305,6 +305,18 @@
         <img src="img/happy-face.svg" alt="Mi página">
     </a>
     <a href="index.html#inicio">☝️</a>
+    <br>
+    <!-- Enlace a correo electrónico y teléfono, estos contienen sus propios protocolos, al igual que otras redes sociales -->
+    <a href="mailto:hdaniela127c@gmail.com">Enlace a correo electrónico</a>
+    <br>
+    <a href="tel:5492996555715">Enlace a teléfono</a>
+    <br>
+    <a target="_blank" href="https://api.whatsapp.com/send?phone=542996555715&text=Holaa!">Enlace hacia whatsApp</a>
+    <!-- send?phone=pongo numero -> esto es una variable 
+    & -> con esto le indico que le paso otra variable,
+    cuando en la url encuentro el signo de pregunta después del send,
+    indica que le puedo pasar valores,
+    como por ejemplo un saludo -->
     <hr>
     <h2 id="script">Script en html</h2>
     <!-- Antes de la etiqueta de cierre del body -->
