--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <li><a href="index.html#enlaces">Enlaces</a></li>
         <li><a href="index.html#elementos-interactivos">Elementos interactivos</a></li>
         <li><a href="index.html#audio-video">Audio y video</a></li>
+        <li><a href="index.html#iframes">Iframes</a></li>
         <li><a href="index.html#script">Script</a></li>
         <li><a href=""></a></li>
     </ul>
@@ -383,6 +384,54 @@
         <!-- Para video tienen los mismos atributos pero este tiene poster para una miniatura, aclarar que archivo queremos, poner una imagen del mismo tamaño -->
     <video src="media/cielito.mp4" controls preload style="height: 400px"></video>
     <br>
+    <a href="index.html">☝️</a>
+    <hr>
+
+    <h2 id="iframes">Iframes</h2>
+    <span>otra página del mismo sitio</span>
+    <br>
+    <iframe src="otroIndex.html" frameborder="2"></iframe>
+    <br>
+    <!-- También podemos hacerlo con enlaces externos, pero no todos lo permitirán -->
+    <span>Enlace externo</span><br>
+    <iframe src="https://danielacalisaya.github.io/myPortfolio/" frameborder="0"></iframe>
+    <!-- Dentro de la etiqueta no introduciremos nada -->
+    <!-- en src pondremos la url o el archivo que queremos cargar -->
+    <!-- atributo frameborder, le indicamos el grosor del borde -->
+    <br>
+    <span>PDF propio</span><br>
+    <iframe src="media/emmet-cheat-sheet.pdf" frameborder="0"></iframe>
+    <br>
+    <span>MAPA Grumari Río de Janeiro Brasil</span>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d58738.64742378729!2d-43.56444414465539!3d-23.05439462475652!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9be9ba4af15a97%3A0xd23cca1824b32a47!2sGrumari%2C%20R%C3%ADo%20de%20Janeiro%20-%20Estado%20de%20R%C3%ADo%20de%20Janeiro%2C%20Brasil!5e0!3m2!1ses!2sar!4v1680739743665!5m2!1ses!2sar" 
+        width="600" 
+        height="450" 
+        style="border:0;" 
+        allowfullscreen="" 
+        loading="lazy" 
+        referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+    <br>
+    <span>VIDEO youtube</span>
+    <!-- No todos los videos lo permitirán -->
+    <iframe 
+        width="560" 
+        height="315" 
+        src="https://www.youtube.com/embed/-5q5mZbe3V8" 
+        title="YouTube video player" 
+        frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        allowfullscreen>
+    </iframe>
+    <iframe 
+        width="560" 
+        height="315" 
+        src="https://www.youtube.com/embed/F55LNTW3GE0" 
+        title="YouTube video player" 
+        frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        allowfullscreen>
+    </iframe>
     <a href="index.html">☝️</a>
     <hr>
 
