--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <li><a href="index.html#elementos-interactivos">Elementos interactivos</a></li>
         <li><a href="index.html#audio-video">Audio y video</a></li>
         <li><a href="index.html#iframes">Iframes</a></li>
+        <li><a href="index.html#formulario">Formularios</a></li>
         <li><a href="index.html#script">Script</a></li>
         <li><a href=""></a></li>
     </ul>
@@ -432,6 +433,34 @@
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
         allowfullscreen>
     </iframe>
+    <a href="index.html">☝️</a>
+    <hr>
+    
+    <h2 id="formulario">Formularios</h2>
+    <h3>Elementos de formularios</h3>
+    <input type="text"><br><!-- trabaja en linea -->
+    <input type="checkbox" name="" id=""><br>
+    <input type="radio" name="" id=""><br>
+    <input type="date" name="" id=""><br>
+    <input type="color" name="" id=""><br><!-- se puede cambiar el color -->
+    <input type="button" value="Botón"><br>
+    <input type="submit" value="Enviar"><br><!-- envio -->
+    <input type="reset" value="Resetear"><br><!-- limpiará todos los valores introducidos -->
+    <input type="file" name="" id="" multiple><br><!-- atributo multiple, puedo seleccionar más de un archivo -->
+    <input type="hidden" name="idioma" value="es"><br><!-- input de tipo hidden, ocultos. El atributo name toma lo que se escribio como una variable y se envia los datos al servidor -->
+    <input type="email" name="" id=""><br>
+    <input type="number" name="" id=""><br><!-- En los input de tipo email y number, si estamos en un dispositivo de teclado tactil se activa la numeracion o el arroba o la tecla .com -->
+    <input type="tel" name="" id=""><br>
+    <input type="password" name="" id=""><br>
+    <input type="search" name="" id=""><br>
+    <textarea name="" id="" cols="50" rows="5"></textarea><br><!-- de 5 renglones -->
+    <select name="" id="" multiple><!-- puede o no llevar el atributo de multiple -->
+        <option value="">html</option>
+        <option value="">css</option>
+        <option value="">js</option>
+        <option value="">pyton</option>
+    </select>
+    <br>
     <a href="index.html">☝️</a>
     <hr>
 
