--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <li><a href="index.html#audio-video">Audio y video</a></li>
         <li><a href="index.html#iframes">Iframes</a></li>
         <li><a href="index.html#formulario">Formularios</a></li>
+        <li><a href="index.html#dataAttributes">Data Attributes</a></li>
         <li><a href="index.html#script">Script</a></li>
         <li><a href=""></a></li>
     </ul>
@@ -538,7 +539,22 @@
         <input type="submit" value="Enviar">
         <input type="reset" value="Restablecer">
     </form>
+    <br>
+    <a href="index.html">☝️</a>
+    <hr>
+    <!-- 6.27 form de contacto, lo hice como proyecto -->
 
+    <h2 id="dataAttributes">Data Attributes</h2>
+    <!-- que son? atributos que nosotros mismos podemos crear -->
+    <ul>
+        <!-- si o si debe empezar el atributo con data después se le agrega lo que queramos, lo usa boostrap -->
+        <li data-id="1" data-name="spring">Primavera</li>
+        <li data-id="2" data-name="summer">Verano</li>
+        <li data-id="3" data-name="autumn">Otoño</li>
+        <li data-id="4" data-name="winter">Invierno</li>
+    </ul>
+    <!-- Link -> Data attributes con Javascript
+        https://www.youtube.com/watch?v=l6npGZa_vgc&list=PLvq-jIkSeTUZ6QgYYO3MwG9EMqC-KoLXA&index=1&t=0s -->
     <br>
     <a href="index.html">☝️</a>
     <hr>
