--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
     <title>HTML♥</title>
     <!-- linkeo del css, la mejor forma -->
     <link rel="stylesheet" href="assets/style.css">
+    <!-- SEO, FAVICON, COLOR -->
+    <link rel="canonical" href="http://tudominio/la-url-canonica">
+    <!-- logo del favicon debe estar en png, tambien con extension ico pero esa es solo para navegadores -->
+    <link rel="icon" href="img/logo-miCosturerito.png"><!-- para navegadores -->
+    <link rel="apple-touch-icon" href="img/logo-miCosturerito.png"><!-- para telefonos -->
+    <meta name="theme-color" content="#e1bcfe"><!-- se notará el cambio de color solo en versión mobile -->
 </head>
 
 <body> <!-- ETIQUETAS Identación!! las etiquetas tienen una jerarquia -->
@@ -47,6 +53,7 @@
         <li><a href="index.html#iframes">Iframes</a></li>
         <li><a href="index.html#formulario">Formularios</a></li>
         <li><a href="index.html#dataAttributes">Data Attributes</a></li>
+        <li><a href="index.html#metaEtiquetas">Meta etiquetas para SEO</a></li>
         <li><a href="index.html#script">Script</a></li>
         <li><a href=""></a></li>
     </ul>
@@ -556,6 +563,13 @@
     <!-- Link -> Data attributes con Javascript
         https://www.youtube.com/watch?v=l6npGZa_vgc&list=PLvq-jIkSeTUZ6QgYYO3MwG9EMqC-KoLXA&index=1&t=0s -->
     <br>
+    <a href="index.html">☝️</a>
+    <hr>
+
+    <h2 id="metaEtiquetas">Meta etiquetas para SEO</h2>
+    <!-- Importantes para su posicionamiento -->
+    <br>
+
     <a href="index.html">☝️</a>
     <hr>
 
