--- a/video-css-2/index.html
+++ b/video-css-2/index.html
@@ -15,7 +15,9 @@
 
 <body>
 
-    <h1>Aprendiendo CSS</h1><!-- CSS lenguaje de definición de estilos en html -->
+    <h1>Aprendiendo CSS</h1>
+    <!-- CSS lenguaje de definición de estilos en html,
+        va avanzando no en versiones sino en módulos -->
     <!-- Estilos en linea -->
     <p><i style="font-weight: bold; color: blue;">Cascading Style Sheets | Hojas de estilo en cascada</i></p>
 
