--- a/video-css-2/index.html
+++ b/video-css-2/index.html
@@ -20,7 +20,28 @@
         va avanzando no en versiones sino en módulos -->
     <!-- Estilos en linea -->
     <p><i style="font-weight: bold; color: blue;">Cascading Style Sheets | Hojas de estilo en cascada</i></p>
+    
+    <h2 id="temario-css">Temario del curso</h2>
+    <ul>
+        <li><a href="index.html#selectores-basicos">Selectores básicos</a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+    </ul>
+    <hr>
 
+    <article id="selectores-basicos">
+        <h2>Selectores básicos</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, laborum est explicabo perspiciatis fugit placeat, labore fuga architecto doloremque alias accusamus facilis quo esse et ullam atque neque dicta itaque?</p>
+        <p id="parrafo-dos">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas consequuntur, veritatis adipisci, iure, doloribus nisi facere hic recusandae qui maxime ratione vero possimus sapiente neque natus dolor itaque dicta distinctio!</p>
+        <p class="text-32 bg-skyblue">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem natus sequi nobis fugit at magni ipsum dolorum temporibus suscipit eveniet voluptate est quod aliquid ducimus maiores esse nulla, et quidem.</p>
+        <p class="text-20 bg-steelblue text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum cupiditate tenetur repudiandae praesentium rerum dolorem numquam voluptate ipsam! Corrupti aspernatur, obcaecati blanditiis officiis accusantium illo totam vitae minus animi natus!</p>
+        <p class="text-32 bg-steelblue text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores facere esse ratione odio doloribus fugit. Ex autem, optio exercitationem tempora perspiciatis veniam eius porro quo incidunt eos, sint ullam necessitatibus!</p>
+        <!-- las clases tienen que ser puntuales y referentes, por ejemplo el texto tendra un tamaño de 32 -->
+    </article>
+    <a href="index.html#temario-css">☝️</a>
+    <hr>
 
 </body>
 </html>
