--- a/video-css-2/index.html
+++ b/video-css-2/index.html
@@ -6,30 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Video II - Fundamentos CSS</title>
     <link rel="stylesheet" href="css/style.css"> <!-- lo ideal(externo) -->
-    <!-- <style>  -> estilos en el head(interno) 
+    <style>  /* -> estilos en el head(interno)  */
         h1 {
             color: blueviolet;
         }
-    </style> -->
+        html {
+            scroll-behavior: smooth; /* animación suave de scroll */
+        }
+    </style> 
 </head>
 
 <body>
 
-    <h1>Aprendiendo CSS</h1>
-    <!-- CSS lenguaje de definición de estilos en html,
+    <article id="temario-css">
+        <h1>Aprendiendo CSS</h1>
+        <!-- CSS lenguaje de definición de estilos en html,
         va avanzando no en versiones sino en módulos -->
-    <!-- Estilos en linea -->
-    <p><i style="font-weight: bold; color: blue;">Cascading Style Sheets | Hojas de estilo en cascada</i></p>
+        <!-- Estilos en linea -->
+        <p><i style="font-weight: bold; color: blue;">Cascading Style Sheets | Hojas de estilo en cascada</i></p>
     
-    <h2 id="temario-css">Temario del curso</h2>
-    <ul>
-        <li><a href="index.html#selectores-basicos">Selectores básicos</a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-    </ul>
-    <hr>
+        <h2>Temario del curso</h2>
+        <ul>
+            <li><a href="index.html#selectores-basicos">Selectores básicos</a></li>
+            <li><a href="index.html#selectores-avanzados">Selectores avanzados</a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+        </ul>
+        <hr>
+    </article>
+    
 
     <article id="selectores-basicos">
         <h2>Selectores básicos</h2>
@@ -42,6 +48,29 @@
     </article>
     <a href="index.html#temario-css">☝️</a>
     <hr>
+
+    <article id="selectores-avanzados">
+        <h2>Selectores avanzados</h2> 
+        <h3>Selectores de hijos</h3>
+        <h4>Selector de hijos directos</h4>
+        <ul class="hijos-directos">
+            <li><b>Primavera</b></li>
+            <li><b>Verano</b></li>
+            <li><b>Otoño</b></li>
+            <li><b>Invierno</b></li>
+        </ul>
+        <h4>Selector de hijos descendientes</h4>
+        <ul class="hijos-descendientes">
+            <li><b>Primavera</b></li>
+            <li><b>Verano</b></li>
+            <li><b>Otoño</b></li>
+            <li><b>Invierno</b></li>
+        </ul>
+
+    </article>
+    <a href="index.html#temario-css">☝️</a>
+    <hr>
+
 
 </body>
 </html>
