--- a/video-css-2/index.html
+++ b/video-css-2/index.html
@@ -66,6 +66,21 @@
             <li><b>Otoño</b></li>
             <li><b>Invierno</b></li>
         </ul>
+        <h3>Selector de hermanos</h3>
+        <h4>Selector de hermanos(en general)</h4>
+        <ul>
+            <li><b>Primavera</b></li>
+            <li class="hermanos-general"><b>Verano</b></li>
+            <li><b>Otoño</b></li>
+            <li><b>Invierno</b></li>
+        </ul>
+        <h4>Selector de hermanos(adyacente)</h4><!-- está debajo de este -->
+        <ul>
+            <li><b>Primavera</b></li>
+            <li class="hermanos-adyacentes"><b>Verano</b></li>
+            <li><b>Otoño</b></li>
+            <li><b>Invierno</b></li>
+        </ul>
 
     </article>
     <a href="index.html#temario-css">☝️</a>
