--- a/video-css-2/index.html
+++ b/video-css-2/index.html
@@ -59,6 +59,7 @@
             <li><b>Otoño</b></li>
             <li><b>Invierno</b></li>
         </ul>
+
         <h4>Selector de hijos descendientes</h4>
         <ul class="hijos-descendientes">
             <li><b>Primavera</b></li>
@@ -66,6 +67,7 @@
             <li><b>Otoño</b></li>
             <li><b>Invierno</b></li>
         </ul>
+
         <h3>Selector de hermanos</h3>
         <h4>Selector de hermanos(en general)</h4>
         <ul>
@@ -74,6 +76,7 @@
             <li><b>Otoño</b></li>
             <li><b>Invierno</b></li>
         </ul>
+
         <h4>Selector de hermanos(adyacente)</h4><!-- está debajo de este -->
         <ul>
             <li><b>Primavera</b></li>
@@ -81,6 +84,17 @@
             <li><b>Otoño</b></li>
             <li><b>Invierno</b></li>
         </ul>
+
+        <h3>Selector de atributos</h3>
+        <nav class="selectores-atributos">
+            <ul>
+                <li><a href="https://jonmircha.com" target="_blank">Inicio</a></li>
+                <li><a class="menu-item cursos btn" href="https://jonmircha.com/cursos" target="_blank">Cursos</a></li>
+                <li><a href="https://jonmircha.com/blog" target="_blank">Blog</a></li>
+                <li><a class="menu-item" href="https://jonmircha.com/hola" target="_blank">Ahora</a></li>
+                <li><a href="index.html#temario-css">Inicio</a></li>
+            </ul>
+        </nav>
 
     </article>
     <a href="index.html#temario-css">☝️</a>
