--- a/video-css-2/index.html
+++ b/video-css-2/index.html
@@ -96,6 +96,14 @@
             </ul>
         </nav>
 
+        <h3>Selector universal(*)</h3><!-- representado por el asterisco -->
+        <ul class="selector-universal">
+            <li><b>Primavera</b></li>
+            <li><b>Verano</b></li>
+            <li><b>Otoño</b></li>
+            <li><b>Invierno</b></li>
+        </ul>
+
     </article>
     <a href="index.html#temario-css">☝️</a>
     <hr>
