pseudoclases de estado

--- a/video-css-2/index.html
+++ b/video-css-2/index.html
@@ -29,7 +29,7 @@
         <ul>
             <li><a href="index.html#selectores-basicos">Selectores básicos</a></li>
             <li><a href="index.html#selectores-avanzados">Selectores avanzados</a></li>
-            <li><a href=""></a></li>
+            <li><a href="index.html#pseudoclases">Pseudoclases</a></li>
             <li><a href=""></a></li>
             <li><a href=""></a></li>
         </ul>
@@ -103,11 +103,39 @@
             <li><b>Otoño</b></li>
             <li><b>Invierno</b></li>
         </ul>
+        </article>
+        <a href="index.html#temario-css">☝️</a>
+        <hr>
 
-    </article>
+        <article id="pseudoclases">
+            <h2>Pseudoclases</h2>
+            <form class="form-pseudoclases">
+                <input type="text" name="nombre" placeholder="Escribe tu nombre" required>
+                <br>
+                <input type="email" name="correo" placeholder="Escribe tu correo" required>
+                <br>
+                <input type="submit">
+                <input type="submit" disabled>
+            </form>
+            <nav class="menu-pseudoclases">
+                <a href="#seccion1">Sección 1</a>
+                <a href="#seccion2">Sección 2</a>
+                <a href="#seccion3">Sección 3</a>
+                <a href="#seccion4">Sección 4</a>
+            </nav>
+            <p class="p-pseudoclases">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci alias est exercitationem ad. Incidunt explicabo et corporis, in aperiam autem, minus consequuntur quos aspernatur commodi nulla blanditiis! Totam, tenetur modi?
+            </p>
+        </article>
+
+
+        <a href="index.html#temario-css">☝️</a>
+        <hr>
+        
+
+    
     <a href="index.html#temario-css">☝️</a>
     <hr>
-
 
 </body>
 </html>
