pseudoclases por posicion y tipo

--- a/video-css-2/index.html
+++ b/video-css-2/index.html
@@ -126,6 +126,32 @@
             <p class="p-pseudoclases">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci alias est exercitationem ad. Incidunt explicabo et corporis, in aperiam autem, minus consequuntur quos aspernatur commodi nulla blanditiis! Totam, tenetur modi?
             </p>
+
+            <ol class="lista-pseudoclases">
+                <li>Enero</li>
+                <li>Febrero</li>
+                <li>Marzoo</li>
+                <li>Abril</li>
+                <li>Mayo</li>
+                <li>Junio</li>
+                <li>Julio</li>
+                <li>Agosto</li>
+                <li>Septiembre</li>
+                <li>Octubre</li>
+                <li>Noviembre</li>
+                <li>Diciembre</li>
+            </ol>
+            <article class="articulo-pseudoclases">
+                <header>header</header>
+                <p>parrafo</p>
+                <div>div</div>
+                <p>parrafo</p>
+                <section>seccion</section>
+                <p>parrafo</p>
+                <div>div</div>
+                <p>parrafo</p>
+                <footer>footer</footer>
+            </article>
         </article>
 
 
