--- a/video-css-2/index.html
+++ b/video-css-2/index.html
@@ -30,7 +30,7 @@
             <li><a href="index.html#selectores-basicos">Selectores básicos</a></li>
             <li><a href="index.html#selectores-avanzados">Selectores avanzados</a></li>
             <li><a href="index.html#pseudoclases">Pseudoclases</a></li>
-            <li><a href=""></a></li>
+            <li><a href="index.html#pseudoelementos">Pseudoelementos</a></li>
             <li><a href=""></a></li>
         </ul>
         <hr>
@@ -153,9 +153,23 @@
                 <footer>footer</footer>
             </article>
         </article>
-
-
         <a href="index.html#temario-css">☝️</a>
+        <hr>
+
+        <article id="pseudoelementos">
+            <h2>Pseudoelementos</h2>
+            <p>
+                <i>Telas</i><br>
+                <span class="tela-clase">Alpaca</span><br> 
+                <span class="precio">600</span> 
+            </p>
+            <p class="p-pseudoelementos">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas deleniti magnam ipsum quia a odio, velit possimus optio minima dicta, esse doloremque? Exercitationem amet, culpa nostrum labore quaerat fugiat recusandae?
+            </p>
+            <input class="input-pseudoelementos" type="text" name="nombre" placeholder="Escribe tu nombre"><br>
+            
+            <a href="index.html#temario-css">☝️</a>
+        </article>
         <hr>
         
 
