--- a/video-css-2/index.html
+++ b/video-css-2/index.html
@@ -32,6 +32,7 @@
             <li><a href="index.html#pseudoclases">Pseudoclases</a></li>
             <li><a href="index.html#pseudoelementos">Pseudoelementos</a></li>
             <li><a href="index.html#agrupar-selectores">Agrupar selectores</a></li>
+            <li><a href="index.html#algoritmo-css">Algoritmo de CSS</a></li>
         </ul>
         <hr>
     </article>
@@ -180,12 +181,20 @@
                 <textarea name="comentarios" placeholder="Escribe tus comentarios" cols="30" rows="10"></textarea>
                 <input type="submit">
             </form>
+            <a href="index.html#temario-css">☝️</a>
+        </article>
+        <hr>
 
+        <article id="algoritmo-css">
+            <h2>El Algoritmo de CSS</h2><!-- es la forma en la que css aplicará los estilos al html -->
+            <ul>
+                <li>Cascada</li>
+                <li>Especificidad</li>
+                <li>Herencia</li>
+            </ul>
             <a href="index.html#temario-css">☝️</a>
         </article>
         <hr>
     
-    
-
 </body>
 </html>
