--- a/video-css-2/index.html
+++ b/video-css-2/index.html
@@ -187,11 +187,15 @@
 
         <article id="algoritmo-css">
             <h2>El Algoritmo de CSS</h2><!-- es la forma en la que css aplicará los estilos al html -->
-            <ul>
+            <ol>
                 <li>Cascada</li>
                 <li>Especificidad</li>
                 <li>Herencia</li>
-            </ul>
+            </ol>
+            <!-- Práctica -->
+            <blockquote id="cita-marco" class="cita-marco" style=background-color:rebeccapurple> <!-- -> este tendrá el mayor peso posible -->
+                Sé tolerante con los demás y estricto contigo mismo <cite>Marco Aurelio</cite>
+            </blockquote>
             <a href="index.html#temario-css">☝️</a>
         </article>
         <hr>
