reset-normalize de estilos

--- a/video-css-2/index.html
+++ b/video-css-2/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Video II - Fundamentos CSS</title>
+    <!-- todo es por cascada, asi que las hojas de reset y la de normalize deben ir antes -->
+    <!-- <link rel="stylesheet" href="css/reset.css"> -->
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css"> <!-- lo ideal(externo) -->
     <style>  /* -> estilos en el head(interno)  */
         h1 {
@@ -33,6 +36,7 @@
             <li><a href="index.html#pseudoelementos">Pseudoelementos</a></li>
             <li><a href="index.html#agrupar-selectores">Agrupar selectores</a></li>
             <li><a href="index.html#algoritmo-css">Algoritmo de CSS</a></li>
+            <li><a href="index.html#reset-normalize">Reset y Normaleze</a></li>
         </ul>
         <hr>
     </article>
@@ -196,6 +200,13 @@
             <blockquote id="cita-marco" class="cita-marco" style=background-color:rebeccapurple> <!-- -> este tendrá el mayor peso posible -->
                 Sé tolerante con los demás y estricto contigo mismo <cite>Marco Aurelio</cite>
             </blockquote>
+            <a href="index.html#temario-css">☝️</a>
+        </article>
+        <hr>
+
+        <article id="reset-normalize">
+            <h2>Reset y Normalize</h2>
+            <p>Hojas de estilos de estas dos páginas</p>
             <a href="index.html#temario-css">☝️</a>
         </article>
         <hr>
