--- a/video-css-2/index.html
+++ b/video-css-2/index.html
@@ -37,6 +37,7 @@
             <li><a href="index.html#agrupar-selectores">Agrupar selectores</a></li>
             <li><a href="index.html#algoritmo-css">Algoritmo de CSS</a></li>
             <li><a href="index.html#reset-normalize">Reset y Normaleze</a></li>
+            <li><a href="index.html#prefijos-navegadores">Prefijos de los navegadores</a></li>
         </ul>
         <hr>
     </article>
@@ -207,6 +208,17 @@
         <article id="reset-normalize">
             <h2>Reset y Normalize</h2>
             <p>Hojas de estilos de estas dos páginas</p>
+            <a href="index.html#temario-css">☝️</a>
+        </article>
+        <hr>
+
+        <article id="prefijos-navegadores">
+            <h2>Prefijos de los navegadores</h2>
+            <ul>
+                <li>Navegadores de Microsoft <code><b>-ms-</b></code></li>
+                <li>Firefox <code><b>-moz-</b></code></li>
+                <li>Todos los demás navegadores <code><b>-webkit-</b></code></li>
+            </ul>
             <a href="index.html#temario-css">☝️</a>
         </article>
         <hr>
