--- a/video-css-2/index.html
+++ b/video-css-2/index.html
@@ -38,6 +38,7 @@
             <li><a href="index.html#algoritmo-css">Algoritmo de CSS</a></li>
             <li><a href="index.html#reset-normalize">Reset y Normaleze</a></li>
             <li><a href="index.html#prefijos-navegadores">Prefijos de los navegadores</a></li>
+            <li><a href="box-model.html">Modelos de cajas</a></li>
         </ul>
         <hr>
     </article>
