margin and padding

--- a/video-css-2/box-model.html
+++ b/video-css-2/box-model.html
@@ -29,7 +29,15 @@
         Architecto sapiente repellat quod laborum tempora nemo accusamus temporibus sed! Inventore, ab. 
         Fugiat explicabo impedit exercitationem aspernatur praesentium quam ipsa quis sint?
     </p>
+    <hr>
     
+    <div class="caja-uno">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum nobis nisi facere iure provident, dolorem aliquam optio commodi, harum amet earum saepe ullam, ut sapiente dolore. Voluptas quisquam id soluta.
+    </div>
+    <div class="caja-dos">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, sunt? Itaque esse porro sunt, error autem repellendus impedit odit laboriosam rem eaque quia voluptas, consectetur, alias illo cum incidunt exercitationem?
+    </div>
+
     <a href="index.html#temario-css">☝️</a>
 </body>
 </html>
