box in line and box in block

--- a/video-css-2/box-model.html
+++ b/video-css-2/box-model.html
@@ -38,6 +38,12 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, sunt? Itaque esse porro sunt, error autem repellendus impedit odit laboriosam rem eaque quia voluptas, consectetur, alias illo cum incidunt exercitationem?
     </div>
 
+    <h2>Cajas de Línea VS Cajas de Bloque</h2>
+    <span class="caja-linea">Caja de linea</span>
+    <div class="caja-bloque">
+        Caja de bloque
+    </div>
+
     <a href="index.html#temario-css">☝️</a>
 </body>
 </html>
